Add version description, Fix root description, Add device ID output, Add exact character regex (0-9a-zA-Z_-), Add prevention of multiple consecutive underscores

--- a/.github/MIGRATION_GUIDE/1.0.2.md
+++ b/.github/MIGRATION_GUIDE/1.0.2.md
@@ -1,4 +1,4 @@
-# Migrating to 1.0.2
+# Migrating from < v1.x.x
 
 Since 1.0.X brought breaking changes, here is a small guide that should help you to 
 migrate your setup with as little effort as possible.
